refactor: simplify sql mapper